# agentic-personal-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyrightconfig.json  start.sh
Docker/: docker-compose.yml  example.env  wait-for.sh
Docker/postgres/: init-data.sh  schema.sql
Docker/traefik/: dynamic.yaml
frontend/: README.md
frontend/temp/: client.ts
infra/: README.md
infra/backend/: docker-compose.yml
infra/keycloak/Docker/: Dockerfile
services/: example.env  pyproject.toml  pyrightconfig.json  ty.toml
services/ai-gateway/: README.md  example.env  pyproject.toml
services/ai-gateway/src/: main.py
services/ai-gateway/src/config/: __init__.py  agents.yaml  settings.py
services/ai-gateway/src/domain/: agent_factory.py  tool_factory.py
services/ai-gateway/src/tools/: __init__.py  data_indexer.py  duckduck_search.py  postgres_tool.py
services/ai_gateway/: README.md  main.py  main_graph.py  main_scaffold.py
services/ai_gateway/config/: __init__.py  agents.yaml  settings.py  tools.yaml
services/ai_gateway/db/: agents_schema.sql  wipe_db.sql
services/ai_gateway/domain/: __init__.py  agent.py  agent_factory.py  agent_persistence.py  agent_scaffolding_graph.py  crew_spawner.py  scaffolding_models.py  tool.py  tool_factory.py
services/ai_gateway/toolbox/: __init__.py  available_tools_tool.py  data_indexer_tool.py  date_time_now.py  db_query_tool.py  search_web_tool.py  web_page_helper_tools.py  wifi_pass_generator_tool.py
services/ai_gateway/tools/: __init__.py  data_indexer.py  duckduck_search.py  postgres_tool.py
services/ai_gateway/utils/: __init__.py  llm_provider.py  streaming.py  structured_response_parser.py
services/data_portal/: __init__.py
services/data_portal/config/: __init__.py  settings.py
services/data_portal/data_csv/: agents.csv  tools.csv
services/data_portal/helpers/: __init__.py  colored_logger.py  ollama_embed.py
services/data_portal/models/: __init__.py  agent_model.py  tool_model.py
services/data_portal/qdrant/: ingest.py  setup.py
